# cecl

./: .gitignore  ARCH_NCO_Forecast.ipynb  README.md  justfile  main.py  prepare_arch_data.py  pyproject.toml  run_nco_training_eval.py  test_nco_enhanced.py
cecl/core/: eval.py  grpo.py  nco_analysis.py  sampling.py
cecl/envs/: base.py  env_creator.py  nco.py  nco_env.py  nco_env_enhanced.py  nco_env_single.py
cecl/models/: download_model.py  hf_to_jax.py  qwen3.py  tokenizer.py
cecl/utils/: checkpoint.py  configs.py  datasets.py  sharding.py  train_state.py  wandb.py
data/Bankruptcy_excel/: bank_2007_jan_mar.xls  bank_2008_apr_june.xlsx  bank_2008_jan_march.xlsx  bank_2008_july_sept.xlsx  bank_2009_july_sept.xlsx  bank_2010_jan_march.xlsx  bank_2011_apr_june.xlsx  bank_2011_july_sept.xlsx  bank_2011_oct_dec.xlsx  bank_2012_apr_june.xlsx  bank_2012_oct_dec.xlsx  bank_2013_oct_dec.xlsx  bank_2014_apr_june.xlsx  bank_2014_july_sept.xlsx  bank_2015_apr_june.xlsx  bank_2015_july_sept.xlsx  bank_2015_oct_dec.xlsx  bank_2016_july_sept.xlsx  bank_2017_apr_june.xlsx  bank_2017_jan_march.xlsx  bank_2017_oct_dec.xlsx  bank_2018_oct_dec.xlsx  bank_2019_apr_june.xlsx  bank_2019_oct_dec.xlsx  bank_2020_apr_june.xlsx  bank_2020_july_sept.xlsx  bank_2020_oct_dec.xlsx  bank_2021_apr_june.xlsx  bank_2021_july_sept.xlsx  bank_2022_apr_june.xlsx  bank_2022_oct_dec.xlsx  bank_2023_jan_march.xlsx  bank_2023_july_sept.xlsx  bank_2024_jan_march.xlsx  bank_2024_july_sept.xlsx
results/: predictions.csv  reasoning.csv  training_data.csv
(+53 files in other folders)
