[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cecl"
version = "0.1.0"
description = "CECL NCO Prediction with GRPO-Enhanced LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
include = ["cecl*"]
